feat: setup keycloak auth